Fixed a couple layout issues with the new design

--- a/css/style.css
+++ b/css/style.css
@@ -7,14 +7,19 @@ p,h1,h2,h3,h4,h5{
 footer {
   padding-top: 3rem;
   padding-bottom: 3rem;
-  background-color: rgba(3, 169, 244, 0.6);
+  background-color: rgba(3, 169, 244, 0.3);
+  height:100%;
   /*background-color: #343a40!important*/
   /*background-color: #E1F5FE;*/
 }
 
 body{
   background-image: url('../images/congruent_pentagon.png');
-    background-attachment: fixed;
+  /*background-attachment: fixed;*/
+}
+
+.aboutFooter{
+  background-color: rgba(3, 169, 244, 0.0);
 }
 footer p {
   margin-bottom: .25rem;
@@ -97,7 +102,7 @@ nav ul li{
 }
 
 .gradient{
-    background-image: linear-gradient(rgba(3, 169, 244, 0.5),rgba(3, 169, 244, 0.6));
+    background-image: linear-gradient(rgba(3, 169, 244, 0.0),rgba(3, 169, 244, 0.3));
 
 /*  background-image: linear-gradient(rgba(3, 169, 244, 0.5), rgba(0, 189, 189, 0.7));
   /*background-color: #03A9F4;*/
@@ -202,7 +207,7 @@ nav ul li{
 }
 
 #about{
-  padding:64px;
+  padding:64px 0px;
 }
 #about .description img{
   width: 70%;
